--- a/content/zh/post/update-2022-04-26.md
+++ b/content/zh/post/update-2022-04-26.md
@@ -1,10 +1,8 @@
 ---
-title: "Update 2022 04 26"
-subtitle: "this is subtitle"
-summary: "this is summary"
+title: "一些更新"
 authors: []
 tags: []
-categories: []
+categories: ["更新"]
 date: 2022-04-26T11:42:02-04:00
 lastmod: 2022-04-26T11:42:02-04:00
 featured: false
@@ -21,3 +19,4 @@ image:
 
 projects: []
 ---
+好久没写东西了，考试也基本完事了，大概说一下最近的一些变化，主要就两个：1. 博客换了个主题，主要是想吧portfolio和博客合并到一个网站上，而之前那个主题扩展性太差了，而且自己又不写前端代码，于是研究了其他各种解决方案。其实notion我还挺喜欢的，可惜不开源而且没法导出数据。Ghost看起来不错但又增加新的学习成本，而且感觉是用来做订阅服务的。最后还是决定继续hugo，wowchemy看起来不错，扩展性和定制性兼具。2. 前段时间弄了个wiki单独记录一些以后可能会经常查阅的东西，要是发在博客里就会分散在各个地方不方便检索。链接就在菜单栏上。
