--- a/content/zh/posts/CF1537E.md
+++ b/content/zh/posts/CF1537E.md
@@ -7,7 +7,7 @@ tags: [字符串, z函数,后缀数组]
 当时有个细节没想到，直接fst
 <!--more-->
 
-首先不难证明最终的字符串一定是由s的一个前缀不断重复得到的。所以我们可以枚举前缀的位置i,如果从i开始重复能使得新字符串比原字符串小的话这个位置就是有利的，同时根据字典序的规则，i肯定是越靠前越好，于是我们就得到了策略：将$s_{i\dots n}$与$s$比较，从比$s$大的中找出i最小的那个。我比赛的时候一看这不就是后缀数组嘛，过了pretest心里美滋滋，结果system test的时候：![fst](/images/CF1537E_fst.png)
+首先不难证明最终的字符串一定是由s的一个前缀不断重复得到的。所以我们可以枚举前缀的位置i,如果从i开始重复能使得新字符串比原字符串小的话这个位置就是有利的，同时根据字典序的规则，i肯定是越靠前越好，于是我们就得到了策略：将$s_{i\dots n}$与$s$比较，从比$s$大的中找出i最小的那个。我比赛的时候一看这不就是后缀数组嘛，过了pretest心里美滋滋，结果system test的时候：![fst](/img/CF1537E_fst.png)
 
 那么问题出在哪了呢？我们来看这个例子$s=bab$。当$i=2$时，$s_{2\dots 2}=b$是$s$的一个前缀，看似$b$比较小，但由于字符串是循环的所以补上一个$s$之后变为$bbab$就比s大了。所以这种情况也就是说$s$的某个后缀等于前缀，我们接下来说明扔掉这个后缀可以获得更好的答案：假设这个后缀的长度是$i$，$s$与$s_{0\dots n-i-1}$循环一次后会在$s$与$s_{i\dots n-1}$对应的位置发生不同，比如说$s=cbcacb$循环之后是这样的
 
